--- a/vitoria.html
+++ b/vitoria.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="estilo.css" />
 	</head>
 	<body>
-
+		<!-- Container-->
 		<div class="container">
 			<div class="row">
 				<div class="col">
